--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.2",
     "@mui/styles": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -15,6 +16,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
+    "react-image-picker-editor": "^1.2.0",
     "react-scripts": "5.0.1",
     "react-time-ago": "^7.2.1",
     "web-vitals": "^2.1.4"
